--- a/index.html
+++ b/index.html
@@ -1,214 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Account disabled by server administrator</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script>
-;window.CloudflareApps=window.CloudflareApps||{};CloudflareApps.siteId="040830ffd0f8870d22f04b6199c5f4b0";CloudflareApps.installs=CloudflareApps.installs||{};;(function(){'use strict'
-CloudflareApps.internal=CloudflareApps.internal||{}
-var errors=[]
-CloudflareApps.internal.placementErrors=errors
-var errorHashes={}
-function noteError(options){var hash=options.selector+'::'+options.type+'::'+(options.installId||'')
-if(errorHashes[hash]){return}
-errorHashes[hash]=true
-errors.push(options)}
-var initializedSelectors={}
-var currentInit=false
-CloudflareApps.internal.markSelectors=function markSelectors(){if(!currentInit){check()
-currentInit=true
-setTimeout(function(){currentInit=false})}}
-function check(){var installs=window.CloudflareApps.installs
-for(var installId in installs){if(!installs.hasOwnProperty(installId)){continue}
-var selectors=installs[installId].selectors
-if(!selectors){continue}
-for(var key in selectors){if(!selectors.hasOwnProperty(key)){continue}
-var hash=installId+'::'+key
-if(initializedSelectors[hash]){continue}
-var els=document.querySelectorAll(selectors[key])
-if(els&&els.length>1){noteError({type:'init:too-many',option:key,selector:selectors[key],installId:installId})
-initializedSelectors[hash]=true
-continue}else if(!els||!els.length){continue}
-initializedSelectors[hash]=true
-els[0].setAttribute('cfapps-selector',selectors[key])}}}
-CloudflareApps.querySelector=function querySelector(selector){if(selector==='body'||selector==='head'){return document[selector]}
-CloudflareApps.internal.markSelectors()
-var els=document.querySelectorAll('[cfapps-selector="'+selector+'"]')
-if(!els||!els.length){noteError({type:'select:not-found:by-attribute',selector:selector})
-els=document.querySelectorAll(selector)
-if(!els||!els.length){noteError({type:'select:not-found:by-query',selector:selector})
-return null}else if(els.length>1){noteError({type:'select:too-many:by-query',selector:selector})}
-return els[0]}
-if(els.length>1){noteError({type:'select:too-many:by-attribute',selector:selector})}
-return els[0]}}());(function(){'use strict'
-var prevEls={}
-CloudflareApps.createElement=function createElement(options,prevEl){options=options||{}
-CloudflareApps.internal.markSelectors()
-try{if(prevEl&&prevEl.parentNode){var replacedEl
-if(prevEl.cfAppsElementId){replacedEl=prevEls[prevEl.cfAppsElementId]}
-if(replacedEl){prevEl.parentNode.replaceChild(replacedEl,prevEl)
-delete prevEls[prevEl.cfAppsElementId]}else{prevEl.parentNode.removeChild(prevEl)}}
-var element=document.createElement('cloudflare-app')
-var container
-if(options.pages&&options.pages.URLPatterns&&!CloudflareApps.matchPage(options.pages.URLPatterns)){return element}
-try{container=CloudflareApps.querySelector(options.selector)}catch(e){}
-if(!container){return element}
-if(!container.parentNode&&(options.method==='after'||options.method==='before'||options.method==='replace')){return element}
-if(container===document.body){if(options.method==='after'){options.method='append'}else if(options.method==='before'){options.method='prepend'}}
-switch(options.method){case'prepend':if(container.firstChild){container.insertBefore(element,container.firstChild)
-break}
-case'append':container.appendChild(element)
-break
-case'after':if(container.nextSibling){container.parentNode.insertBefore(element,container.nextSibling)}else{container.parentNode.appendChild(element)}
-break
-case'before':container.parentNode.insertBefore(element,container)
-break
-case'replace':try{var id=element.cfAppsElementId=Math.random().toString(36)
-prevEls[id]=container}catch(e){}
-container.parentNode.replaceChild(element,container)}
-return element}catch(e){if(typeof console!=='undefined'&&typeof console.error!=='undefined'){console.error('Error creating Cloudflare Apps element',e)}}}}());(function(){'use strict'
-CloudflareApps.matchPage=function matchPage(patterns){if(!patterns||!patterns.length){return true}
-var loc=document.location.host+document.location.pathname
-if(window.CloudflareApps&&CloudflareApps.proxy&&CloudflareApps.proxy.originalURL){var url=CloudflareApps.proxy.originalURL.parsed
-loc=url.host+url.path}
-for(var i=0;i<patterns.length;i++){var re=new RegExp(patterns[i],'i')
-if(re.test(loc)){return true}}
-return false}}());CloudflareApps.installs["rke0K3hriQJX"]={appId:"lMxPPXVOqmoE",scope:{}};;CloudflareApps.installs["rke0K3hriQJX"].options={"anonymizeIp":false,"id":"UA-128528983-1","social":true};;if(CloudflareApps.matchPage(CloudflareApps.installs['rke0K3hriQJX'].URLPatterns)){(function(){var options=CloudflareApps.installs['rke0K3hriQJX'].options;var id;if(options.account&&options.organization){id=options["web-properties-for-"+options.organization];}else{id=(options.id||"").trim();}
-if(!id){console.log("Cloudflare Google Analytics: Disabled. UA-ID not present.");return;}else if("rke0K3hriQJX"==="preview"){console.log("Cloudflare Google Analytics: Enabled",id);}
-function resolveParameter(uri,parameter){if(uri){var parameters=uri.split("#")[0].match(/[^?=&]+=([^&]*)?/g);for(var i=0,chunk;(chunk=parameters[i]);++i){if(chunk.indexOf(parameter)===0){return unescape(chunk.split("=")[1]);}}}}
-window.dataLayer=window.dataLayer||[];function gtag(){window.dataLayer.push(arguments);}
-gtag("js",new Date());gtag("config",id);gtag("set",{anonymizeIp:options.anonymizeIp});var vendorScript=document.createElement("script");vendorScript.src="https://www.googletagmanager.com/gtag/js?id="+id;document.head.appendChild(vendorScript);if(options.social){window.addEventListener("load",function googleAnalyticsSocialTracking(){var FB=window.FB;var twttr=window.twttr;if("FB"in window&&"Event"in FB&&"subscribe"in window.FB.Event){FB.Event.subscribe("edge.create",function(targetUrl){gtag("event","share",{method:"facebook",event_action:"like",content_id:targetUrl});});FB.Event.subscribe("edge.remove",function(targetUrl){gtag("event","share",{method:"facebook",event_action:"unlike",content_id:targetUrl});});FB.Event.subscribe("message.send",function(targetUrl){gtag("event","share",{method:"facebook",event_action:"send",content_id:targetUrl});});}
-if("twttr"in window&&"events"in twttr&&"bind"in twttr.events){twttr.events.bind("tweet",function(event){if(event){var targetUrl;if(event.target&&event.target.nodeName==="IFRAME"){targetUrl=resolveParameter(event.target.src,"url");}
-gtag("event","share",{method:"twitter",event_action:"tweet",content_id:targetUrl});}});}},false);}})();}
-</script><style>
-    body {
-      font-weight: normal;
-      font-size: 11px;
-      font-family: Arial;
-    }
-    .fatal-error {
-      width: 270px;
-      height: 270px;
-      margin: 0 auto;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-left: -135px;
-      margin-top: -135px;
-    }
-    .fatal-error-round {
-      width: 270px;
-      height: 270px;
-      background: #FF8356;
-      border-radius: 270px;
-    }
-    .fatal-error-inner {
-      padding-top: 23px;
-      text-align: center;
-    }
-    .fatal-error-sign {
-      margin-bottom: 10px;
-    }
-    .fatal-error-sign-top {
-      background: #FFF;
-      width: 14px;
-      height: 7px;
-      border-radius: 28px 28px 0 0;
-      margin: 0 auto;
-    }
-    .fatal-error-sign-body {
-      content: "";
-      width: 0px;
-      height: 0px;
-      border-style: solid outset;
-      border-width: 54px 7px 0 7px;
-      border-color: #FFF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
-      margin: 0 auto;
-    }
-    .fatal-error-sign-empty {
-      background: #FF8356;
-      margin: 0 auto;
-      width: 10px;
-      height: 11px;
-      z-index: 1;
-      margin-top: -7px;
-    }
-    .fatal-error-sign-dot {
-      background: #FFF;
-      width: 14px;
-      height: 14px;
-      border-radius: 14px;
-      margin: 0 auto;
-      margin-top: 0px;
-    }
-    .fatal-error-message {
-      font-size: 12px;
-      overflow: hidden;
-      padding: 0 10px;
-      color: #fff;
-    }
-    .fatal-error-header {
-      font-size: 27px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .b-copyright {
-      margin-top: 40px;
-      text-align: center;
-    }
-    .b-copyright__link {
-      color: #587b9d;
-    }
-    .b-text_lang_ru {
-      display: none;
-    }
-  </style>
-</head>
-<body>
-<div id="main-wrapper">
-<div id="fatal-error" class="fatal-error">
-<div class="fatal-error-round">
-<div class="fatal-error-inner">
-<div class="fatal-error-sign">
-<div class="fatal-error-sign-top"></div>
-<div class="fatal-error-sign-body"></div>
-<div class="fatal-error-sign-empty"></div>
-<div class="fatal-error-sign-dot"></div>
-</div>
-<div class="fatal-error-message">
-<div class="fatal-error-header b-text b-text_lang_en">Attention</div>
-<div class="fatal-error-header b-text b-text_lang_ru">Внимание</div>
-<div class="fatal-error-desc b-text b-text_lang_en">Account disabled by server administrator.</div>
-<div class="fatal-error-desc b-text b-text_lang_ru">Аккаунт отключен администратором сервера.</div>
-</div>
-</div>
-</div>
-<div class="b-copyright">
-<a class="b-copyright__link" href="https://ispsystem.com/external/ispmanager.html" target="_blank">ISPsystem © 1997-<script type="text/javascript">document.write(new Date().getFullYear())</script></a>
-</div>
-</div>
-</div>
-<script type="text/javascript">
-  var platformLanguage = navigator && (
-    navigator.language ||
-      navigator.browserLanguage ||
-      navigator.systemLanguage ||
-      navigator.userLanguage ||
-      null ),
-    elemsRU, elemsEN;
-  if (platformLanguage.match("ru") && document.getElementsByClassName) {
-    elemsRU = document.getElementsByClassName("b-text_lang_ru");
-    elemsEN = document.getElementsByClassName("b-text_lang_en");
-    var l = elemsEN.length;
-    while(l--) {
-      elemsEN[l].style.display = "none";
-    }
-    l = elemsRU.length;
-    while(l--) {
-      elemsRU[l].style.display = "block";
-    }
-    document.title = "Аккаунт отключен администратором сервера.";
-  }
-</script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="description" content="designer / somebody with brains / coder"/><meta name="author" content="wilddip"/><title>wilddip</title><link rel="icon" href="icon.ico"><link href="css/0.css" rel="stylesheet"><link as="style" href="css/0.css" rel="preload"><link as="script" href="js/main.5e87ccdd19ef9c2ba6a6.js" rel="preload"><link as="script" href="js/runtime.5e87ccdd19ef9c2ba6a6.js" rel="preload"><link as="script" href="js/vendor.5e87ccdd19ef9c2ba6a6.js" rel="preload"></head><body><video autoplay muted loop id="awesomeVid" class="d-flex mx-auto"><source src="./public/videos/peep1.mp4" type="video/mp4"></video><nav class="navbar navbar-expand-lg"><div class="navbar-brand mx-auto">wilddip</div></nav><footer class="footer"><div class="mx-auto"><a href="https://href.li/?https://vk.com/imabout10yokid" class="link" target="_blank">VK</a> <a href="https://href.li/?https://t.me/lelqs" class="link" target="_blank">TG</a> <a href="https://href.li/?https://lolz.guru/wilddip" class="link" target="_blank">LZT</a> <a href="https://href.li/?https://ru.stackoverflow.com/users/354067/wilddip" class="link" target="_blank">STACK</a></div></footer><script src="js/runtime.5e87ccdd19ef9c2ba6a6.js"></script><script src="js/vendor.5e87ccdd19ef9c2ba6a6.js"></script><script src="js/main.5e87ccdd19ef9c2ba6a6.js"></script></body></html>
